--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -6,24 +6,25 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if (prods.length > 0) { %>
+        <% if (ms.length > 0) { %>
             <div class="grid">
-                <% for (let product of prods) { %>
+                <% for (let match of ms) { %>
                     <article class="card product-item">
                         <header class="card__header">
-                            <h1 class="product__title"><%= product.title %></h1>
+                            <h1 class="product__title"><%= match.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageUrl %>"
-                                alt="<%= product.title %>">
+                            <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png"
+                                alt="<%= match.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">$<%= product.price %></h2>
-                            <p class="product__description"><%= product.description %></p>
+                            <h1 class="product__price">Players left: <%= match.totalPlayers %></h1>
+                            <h2 class="product__price">Where: <%= match.placeName %></h2>
+                            <h3 class="product__price">$<%= match.price %></h3>
+                            <p class="product__description"><%= match.description %></p>
                         </div>
                         <div class="card__actions">
-                                <a href="/products/<%= product._id %>" class="btn">Details</a>
-                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                <a href="/matches/<%= match._id %>" class="btn">Details</a>
                         </div>
                     </article>
                 <% } %>
