--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -15,6 +15,11 @@
                 </a>
             </li>
         </ul>
+        <ul>
+            <li class="main-header__item">
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+            </li>
+        </ul>
     </nav>
 </header>
 
