--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -6,7 +6,7 @@
             <li class="main-header__item">
                 <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
             </li>
-            <% if (isAuthenticated) { %>
+            <!-- <% if (isAuthenticated) { %> -->
             <li class="main-header__item">
                 <a class="<%= path === '/add-match' ? 'active' : '' %>" href="/add-match">Add Match
                 </a>
@@ -15,11 +15,16 @@
                 <a class="<%= path === '/mymatches' ? 'active' : '' %>" href="/mymatches">My Matches
                 </a>
             </li>
-            <% } %>
+            <!-- <% } %> -->
         </ul>
-        <ul>
+        <ul class="main-header__item-list">
             <li class="main-header__item">
                 <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+            </li>
+            <li class="main-header__item">
+                <form action="/logout" method="post">
+                    <button type="submit">Logout</button>
+                </form>
             </li>
         </ul>
     </nav>
