--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -6,45 +6,63 @@
             <li class="main-header__item">
                 <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
             </li>
-            <!-- <% if (isAuthenticated) { %> -->
-            <li class="main-header__item">
-                <a class="<%= path === '/add-match' ? 'active' : '' %>" href="/add-match">Add Match
-                </a>
-            </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/mymatches' ? 'active' : '' %>" href="/mymatches">My Matches
-                </a>
-            </li>
-            <!-- <% } %> -->
+            <% if (isAuthenticated) { %>
+                <li class="main-header__item">
+                    <a class="<%= path === '/add-match' ? 'active' : '' %>" href="/add-match">Add Match</a>
+                </li>
+                <li class="main-header__item">
+                    <a class="<%= path === '/mymatches' ? 'active' : '' %>" href="/mymatches">My Matches</a>
+                </li>
+                <li class="main-header__item">
+                    <a class="<%= path === '/joinmatch' ? 'active' : '' %>" href="/joinmatch">Join a Match</a>
+                </li>
+            <% } %>
         </ul>
         <ul class="main-header__item-list">
-            <li class="main-header__item">
-                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
-            </li>
-            <li class="main-header__item">
-                <form action="/logout" method="post">
-                    <button type="submit">Logout</button>
-                </form>
-            </li>
+            <% if (!isAuthenticated) { %>
+                <li class="main-header__item">
+                    <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+                </li>
+            <% } else { %>
+                <li class="main-header__item">
+                    <form action="/logout" method="post">
+                        <button type="submit">Logout</button>
+                    </form>
+                </li>
+            <% } %>
         </ul>
     </nav>
 </header>
 
 <nav class="mobile-nav">
-        <ul class="mobile-nav__item-list">
+    <ul class="mobile-nav__item-list">
+        <li class="main-header__item">
+            <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
+        </li>
+        <li class="main-header__item">
+            <a class="<%= path === '/matches' ? 'active' : '' %>" href="/matches">Mathces</a>
+        </li>
+        <% if (isAuthenticated) { %>
             <li class="main-header__item">
-                <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
+                <a class="<%= path === '/add-match' ? 'active' : '' %>" href="/add-match">Add Match</a>
             </li>
             <li class="main-header__item">
-                <a class="<%= path === '/products' ? 'active' : '' %>" href="/matches">Mathces</a>
+                <a class="<%= path === '/mymatches' ? 'active' : '' %>" href="/mymatches">My Matches</a>
             </li>
             <li class="main-header__item">
-                <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/user/add-match">Add Match
-                </a>
+                <a class="<%= path === '/joinmatch' ? 'active' : '' %>" href="/joinmatch">Join a Match</a>
             </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/user/matches">My Matches
-                </a>
+        <% } %>
+        <% if (!isAuthenticated) { %>
+            <li class="mobile-nav__item">
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
             </li>
-            </ul>
+        <% } else { %>
+            <li class="mobile-nav__item">
+                <form action="/logout" method="post">
+                    <button type="submit">Logout</button>
+                </form>
+            </li>
+        <% } %>
+    </ul>
 </nav>
