Add of "join" button inside "match cards"

--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -28,6 +28,7 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/matches/<%= match._id %>" class="btn">Details</a>
+                                    <a href="/matches/join/<%= match._id %>" class="btn">Join</a>
                                 </div>
                             </article>
                             <% } %>
