--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -25,6 +25,7 @@
                         </div>
                         <div class="card__actions">
                                 <a href="/matches/<%= match._id %>" class="btn">Details</a>
+                                <a href="/matches/join/<%= match._id %>" class="btn">Join</a>
                         </div>
                     </article>
                 <% } %>
