aggiunta encription delle password e controllo routing
Non e' più possibile accedere a determinate aree del sito se non si e' correttamente registrati e loggati nel sistema.
Per accedere all' sito utente creato:
test@test.com
tepiacess

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,6 +9,10 @@
     <main>
         <form class="signup-form" action="/signup" method="POST">
             <div class="form-control">
+                <label for="usrName">Nome</label>
+                <input type="string" name="usrName" id="usrName">
+            </div>
+            <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
             </div>
