Modifica pagina Home

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,3 +7,5 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
+    <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="shortcut icon" type="image/x-icon">
+    <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="apple-touch-icon">
