--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
+  background-color: #513dff;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
