--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -1,37 +1,35 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
+    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
+      <meta charset="utf-8">
+      <title>Landing page template - Webflow HTML website template</title>
+      <meta content="width=device-width, initial-scale=1" name="viewport">
+      <meta content="Webflow" name="generator">
+      <link href="https://uploads-ssl.webflow.com/63b53f7abad4713772e1a481/css/ciros-ultra-awesome-site.webflow.ff8fcf80b.css" rel="stylesheet" type="text/css">
+      <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gothic+A1:300,regular,500,600,700,800" media="all">
+      <script type="text/javascript">WebFont.load({  google: {    families: ["Gothic A1:300,regular,500,600,700,800"]  }});</script><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 </head>
 
 <body>
     <%- include('../includes/navigation.ejs') %>
 
-    <main>
-        <% if (ms.length > 0) { %>
-            <div class="grid">
-                <% for (let match of ms) { %>
-                    <article class="card product-item">
-                        <header class="card__header">
-                            <h1 class="product__title"><%= match.title %></h1>
-                        </header>
-                        <div class="card__image">
-                            <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png"
-                                alt="<%= match.title %>">
-                        </div>
-                        <div class="card__content">
-                            <h1 class="product__price">Players left: <%= match.totalPlayers %></h1>
-                            <h2 class="product__price">Where: <%= match.placeName %></h2>
-                            <h3 class="product__price">$<%= match.price %></h3>
-                            <p class="product__description"><%= match.description %></p>
-                        </div>
-                        <div class="card__actions">
-                                <a href="/matches/<%= match._id %>" class="btn">Details</a>
-                                <a href="/matches/join/<%= match._id %>" class="btn">Join</a>
-                        </div>
-                    </article>
-                <% } %>
-            </div>
-        <% } else { %>
-            <h1>No Products Found!</h1>
-        <% } %>
-    </main>
+    <body class="body">
+        <div class="section center wf-section">
+           <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" class="hero-content">
+              <h1 class="heading-3">Il Decimo</h1>
+              <h3 class="hero-subhead">Mancano poche ore alla partita di calcetto e ti mancano dei giocatori? <br> 
+                Non riesci mai a trovare degli amici con cui giocare?</h3>
+              <h2>Questo è il posto giusto!</h2>
+              <% if (!isAuthenticated) { %>
+                <a href="/signup" class="button w-button" style="border-radius: 25px;">Registrati subito!</a>
+            <% } else { %>
+                <a href="/add-match" class="button w-button" style="border-radius: 25px;">Crea una nuova partita!</a>
+                <a href="/matches" class="button w-button" style="border-radius: 25px;">Partecipa ad una partita!</a>
+            <% } %>
+           </div>
+           <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" data-w-id="77e69727-c455-8e07-0990-833a661c94ea" sizes="(max-width: 479px) 80vw, (max-width: 991px) 70vw, 100vw" srcset="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png 500w, https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png 731w" alt="" class="hero-image">
+        </div>
+        <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63b53f7abad4713772e1a481" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="https://uploads-ssl.webflow.com/63b53f7abad4713772e1a481/js/webflow.4323451b1.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+
 <%- include('../includes/end.ejs') %>
