aggiustamento di addMatch

--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -28,7 +28,9 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/matches/<%= match._id %>" class="btn">Details</a>
+                                    <% if (isAuthenticated) { %>
                                     <a href="/matches/join/<%= match._id %>" class="btn">Join</a>
+                                    <% } %>
                                 </div>
                             </article>
                             <% } %>
