--- a/views/app/match-detail.ejs
+++ b/views/app/match-detail.ejs
@@ -9,9 +9,12 @@
             <div class="image">
                 <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= m.title %>">
             </div>
-            <h1>Players left: <%= m.totalPlayers %></h1>
+            <h1>Players left: <%= m.totalPlayers - m.currentPlayers %></h1>
             <h2>Where: <%= m.placeName %></h2>
             <h3>$<%= m.price %></h3>
             <p><%= m.description %></p>
+            <% if (isAuthenticated) { %>
+            <a href="/matches/join/<%= m._id %>" class="btn">Join</a>
+            <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
