--- a/views/user/add-match.ejs
+++ b/views/user/add-match.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/match.css">
 </head>
 
 <body>
@@ -8,7 +8,7 @@
 
     <main>
         <h1 style="text-align: center;">CREATE A NEW MATCH!</h1>
-        <form class="product-form" action="/add-match" method="POST">
+        <form class="match-form" action="/add-match" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
