Creazione Join match
modiche varie ed eventuali

--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -1,42 +1,41 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/match.css">
-    </head>
+</head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
-
-            <main>
-                <% if (ms.length > 0) { %>
-                    <div class="grid">
-                        <% for (let match of ms) { %>
-                            <article class="card match-item">
-                                <header class="card__header">
-                                    <h1 class="match__title">
-                                        <%= match.title %>
-                                    </h1>
-                                </header>
-                                <div class="card__image">
-                                    <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
+<body>
+    <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (ms.length > 0) { %>
+                <div class="grid">
+                    <% for (let match of ms) { %>
+                        <article class="card match-item">
+                            <header class="card__header">
+                                <h1 class="match__title">
+                                    <%= match.title %>
+                                </h1>
+                            </header>
+                            <div class="card__image">
+                                <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
+                            </div>
+                            <div class="card__content">
+                                <h2 class="match__price">$
+                                    <%= match.price %>
+                                </h2>
+                                <p class="match__description">
+                                    <%= match.description %>
+                                </p>
+                             </div>
+                            <div class="card__actions">
+                                <a href="/matches/<%= match._id %>" class="btn">Details</a>
+                                <% if (isAuthenticated) { %>
+                                    <a href="/matches/<%= match._id %>/join" class="btn">Join</a>
+                                <% } %>
                                 </div>
-                                <div class="card__content">
-                                    <h2 class="match__price">$
-                                        <%= match.price %>
-                                    </h2>
-                                    <p class="match__description">
-                                        <%= match.description %>
-                                    </p>
-                                </div>
-                                <div class="card__actions">
-                                    <a href="/matches/<%= match._id %>" class="btn">Details</a>
-                                    <% if (isAuthenticated) { %>
-                                    <a href="/matches/join/<%= match._id %>" class="btn">Join</a>
-                                    <% } %>
-                                </div>
-                            </article>
-                            <% } %>
-                    </div>
-                    <% } else { %>
-                        <h1>No matches Found!</h1>
-                        <% } %>
-            </main>
-            <%- include('../includes/end.ejs') %>
+                        </article>
+                    <% } %>
+                </div>
+                <% } else { %>
+                    <h1>No matches Found!</h1>
+                    <% } %>
+        </main>
+    <%- include('../includes/end.ejs') %>
