--- a/views/app/join-match.ejs
+++ b/views/app/join-match.ejs
@@ -9,12 +9,14 @@
             <div class="image">
                 <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= m.title %>">
             </div>
+            <form action="/matches/:matchId/join" method="POST">
+                <input type="hidden" value="<%= m._id %>" name="matchId">
+                <button class="btn" type="submit">CONFERMA!</button>
+            </form>
+            <!-- <a href="/matches/<%= m._id %>/join" class="btn">CONFERMA!</a> -->
             <h1>Players left: <%= m.totalPlayers - m.currentPlayers %></h1>
             <h2>Where: <%= m.placeName %></h2>
             <h3>$<%= m.price %></h3>
             <p><%= m.description %></p>
-            <% if (isAuthenticated) { %>
-            <a href="/matches/join/<%= m._id %>" class="btn">Join</a>
-            <% } %>
         </main>
     <%- include('../includes/end.ejs') %>
