--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -22,11 +22,11 @@
         <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" 
          style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" 
          class="hero-content">
-          <h1 class="heading-3">Il Decimo</h1>
-          <h3 class="hero-subhead">Mancano poche ore alla partita di calcetto e ti mancano dei giocatori?<br> 
+          <h1 class="heading-3" style="text-shadow: 1px 1px 2px black;">Il Decimo</h1>
+          <h3 class="hero-subhead" style="text-shadow: 1px 1px 2px black;" >Mancano poche ore alla partita di calcetto e ti mancano dei giocatori?<br> 
             Non riesci mai a trovare degli amici con cui giocare?
           </h3>
-          <h2>Questo è il posto giusto!</h2>
+          <h2 style="text-shadow: 1px 1px 2px black;">Questo è il posto giusto!</h2>
           <% if (!isAuthenticated) { %>
             <a href="/signup" class="button w-button" style="border-radius: 25px;">Registrati subito!</a>
           <% } else { %>
