--- a/views/app/join-match.ejs
+++ b/views/app/join-match.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/match.css">
 </head>
 
 <body>
@@ -14,13 +15,13 @@
                 <input type="hidden" value="<%= m._id %>" name="matchId">
                 <button class="btn" type="submit">CONFERMA!</button>
             </form>
+            <h1>Players left: <%= m.totalPlayers - m.currentPlayers %></h1>
+            <h2>Where: <%= m.placeName %></h2>
+            <h3>$<%= m.price %></h3>
+            <p><%= m.description %></p>
         <% } else {%>
-            <h1>Sei gia nella partita</h1>
+            <h1 style="color: #513dff;"">You're already in!</h1>
         <% } %>
-        <h1>Players left: <%= m.totalPlayers - m.currentPlayers %></h1>
-        <h2>Where: <%= m.placeName %></h2>
-        <h3>$<%= m.price %></h3>
-        <p><%= m.description %></p>
     </main>
     
 <%- include('../includes/end.ejs') %>
