--- a/public/css/main.css
+++ b/public/css/main.css
@@ -204,13 +204,17 @@ form {
   margin: 0 0.25rem;
 }
 
+.wrapper {
+  text-align: center;
+}
+
 .btn {
   display: inline-block;
   padding: 0.25rem 1rem;
   text-decoration: none;
   font: inherit;
-  border: 1px solid #00695c;
-  color: #00695c;
+  border: 1px solid #513dff;
+  color: #513dff;
   background: white;
   border-radius: 3px;
   cursor: pointer;
@@ -218,7 +222,7 @@ form {
 
 .btn:hover,
 .btn:active {
-  background-color: #00695c;
+  background-color: #513dff;
   color: white;
 }
 
