--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -18,9 +18,20 @@
                         <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
                     </div>
                     <div class="card__content">
-                        <h2 class="match__price">$
-                            <%= match.price %>
+                        <h2 class="match__playerCount">We search:</h2>
+                            <h2 class="match__playerCount" style="color: #513dff;"><%= match.totalPlayers - match.currentPlayers %></h2>
+                        <h2 class="match__playerCount"> players!</h2>
+                        <br>
+                        <h2 class="match__place">
+                            <%= match.placeName %>
                         </h2>
+                        <h2 class="match__place">
+                            <%= match.time.getDate().toString() + "-" + (match.time.getMonth()+1).toString() + "-" + match.time.getFullYear().toString() %>
+                        </h2>
+                        <h2 class="match__price">
+                            <%= match.price %>€
+                        </h2>
+                        <br>
                         <p class="match__description">
                             <%= match.description %>
                         </p>
@@ -31,6 +42,7 @@
                             <a href="/matches/<%= match._id %>/join" class="btn">Join</a>
                         <% } %>
                     </div>
+                    <br>
                 </article>
             <% } %>
             </div>
