--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -69,7 +69,7 @@
                                 </h2>
                             </div>
                             <div class="card__actions">
-                                <a href="#" class="btn">UnJoin</a>
+                                <a href="/matches/<%= match._id %>/unjoin" class="btn">UnJoin</a>
                             </div>
                             <br>
                         </article>
