--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -69,6 +69,7 @@
                                 </h2>
                             </div>
                             <div class="card__actions">
+                                <a href="/matches/<%= match._id %>" class="btn">Details</a>
                                 <a href="#" class="btn">UnJoin</a>
                             </div>
                             <br>
