Aggiunta messaggi di errore in login e registrazione
E modifica alle varie form del sito per rendere obbligatori i campi che devono esserlo con 'required'

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,22 +10,26 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="usrName">Nome</label>
-                <input type="string" name="usrName" id="usrName">
+                <input type="string" name="usrName" id="usrName" required>
             </div>
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" required>
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
+                <input type="password" name="confirmPassword" id="confirmPassword" required>
             </div>
             <button class="btn" type="submit">Signup</button>
         </form>
+        <br>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
     </main>
     
 <%- include('../includes/end.ejs') %>
