--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,14 +10,18 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" required>
             </div>
             <button class="btn" type="submit">Login</button>
         </form>
+        <br>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
     </main>
     
 <%- include('../includes/end.ejs') %>
