--- a/views/user/add-match.ejs
+++ b/views/user/add-match.ejs
@@ -11,27 +11,27 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="title">Title</label>
-                <input type="text" name="title" id="title">
+                <input type="text" name="title" id="title" required>
             </div>
             <div class="form-control">
                 <label for="title">Place</label>
-                <input type="text" name="placeName" id="placeName">
+                <input type="text" name="placeName" id="placeName" required>
             </div>
             <div class="form-control">
                 <label for="title">Address</label>
-                <input type="text" name="address" id="address">
+                <input type="text" name="address" id="address" required>
             </div>
             <div class="form-control">
                 <label for="title">When?</label>
-                <input type="datetime-local" name="time" id="time">
+                <input type="datetime-local" name="time" id="time" required>
             </div>
             <div class="form-control">
                 <label for="title">N. of players</label>
-                <input type="text" name="totalPlayers" id="totalPlayers">
+                <input type="text" name="totalPlayers" id="totalPlayers" required>
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
-                <input type="number" name="price" id="price" step="0.01">
+                <input type="number" name="price" id="price" step="0.01" required>
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
