--- a/public/css/main.css
+++ b/public/css/main.css
@@ -172,6 +172,11 @@ form {
 .card {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 25px;
+  transition: transform .2s; /* Animation */
+}
+
+.card:hover {
+  transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 .card__header,
