--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -10,7 +10,7 @@
             <% if (ms.length > 0) { %>
                 <div class="grid">
                 <% for (let match of ms) { %>
-                    <article class="card match-item">
+                    <article class="card match-item" onclick="location.assign('/matches/<%= match._id %>')">
                         <header class="card__header">
                             <h1 class="match__title">
                                 <%= match.title %>
@@ -53,7 +53,7 @@
                 <% if (jMatches.length > 0) { %>
                     <div class="grid">
                     <% for (let match of jMatches) { %>
-                        <article class="card match-item">
+                        <article class="card match-item" onclick="location.assign('/matches/<%= match._id %>')">
                             <header class="card__header">
                                 <h1 class="match__title">
                                     <%= match.title %>
