--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -2,6 +2,12 @@
     <link rel="stylesheet" href="/css/match.css">
 </head>
 
+<script> 
+    const socket = io();
+    
+    
+    </script>
+
 <body>
     <%- include('../includes/navigation.ejs') %>
         <main>
